# web-auth-bridge

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: architecture.md  design.md  examples.md
examples/: .env.example  _diagnose_headless.py  garmin_connect.py
src/web_auth_bridge/: __init__.py  __main__.py  _types.py  bridge.py  cli.py  exceptions.py
src/web_auth_bridge/auth/: authenticator.py  cache.py  protocols.py
src/web_auth_bridge/browser/: context_pool.py  manager.py
src/web_auth_bridge/http/: client.py
tests/: conftest.py  test_authenticator.py  test_bridge.py  test_browser_manager.py  test_cache.py  test_cli.py  test_context_pool.py  test_exceptions.py  test_http_client.py  test_integration.py  test_main.py  test_types.py
tests/e2e/: __init__.py  conftest.py  test_garmin_live.py  test_rouvy_live.py
