[project]
name = "web-auth-bridge"
version = "0.1.0"
description = "Playwright-based browser authentication bridge for HTTP APIs with complex auth flows"
authors = [
    {name = "Mike Hill", email = "mike@mikejhill.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "httpx>=0.27",
]

[project.scripts]
web-auth-bridge = "web_auth_bridge.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.1a1",
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-httpserver>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_auth_bridge"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # annotations
    "B",      # bugbear
    "A",      # builtins
    "C4",     # comprehensions
    "DTZ",    # datetime
    "T10",    # debugger
    "ISC",    # implicit-str-concat
    "PIE",    # pie
    "PT",     # pytest-style
    "RSE",    # raise
    "RET",    # return
    "SIM",    # simplify
    "TCH",    # type-checking
    "ARG",    # unused-arguments
    "PTH",    # pathlib
    "LOG",    # logging
    "RUF",    # ruff-specific
]
ignore = [
    "ANN401",  # Any in **kwargs is needed for passthrough to httpx/Playwright
]

[tool.ruff.lint.isort]
known-first-party = ["web_auth_bridge"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires real Playwright browser",
]
