[project]
name = "web-auth-bridge"
version = "0.1.0"
description = "Playwright-based browser authentication bridge for HTTP APIs with complex auth flows"
authors = [
    {name = "Mike Hill", email = "mike@mikejhill.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "httpx>=0.27",
]

[project.optional-dependencies]
# TLS impersonation for sites that block non-browser TLS fingerprints
# (e.g., Cloudflare-protected APIs). Used by examples/garmin_connect.py
# to exchange CAS service tickets for DI Bearer tokens.
tls-impersonation = [
    "curl-cffi>=0.15",
]

[project.scripts]
web-auth-bridge = "web_auth_bridge.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.1a1",
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-httpserver>=1.1",
    "coverage>=7.13.5",
    "pytest-cov>=7.1.0",
    "poethepoet>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_auth_bridge"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # annotations
    "B",      # bugbear
    "A",      # builtins
    "C4",     # comprehensions
    "DTZ",    # datetime
    "T10",    # debugger
    "ISC",    # implicit-str-concat
    "PIE",    # pie
    "PT",     # pytest-style
    "RSE",    # raise
    "RET",    # return
    "SIM",    # simplify
    "TCH",    # type-checking
    "ARG",    # unused-arguments
    "PTH",    # pathlib
    "LOG",    # logging
    "RUF",    # ruff-specific
]
ignore = [
    "ANN401",  # Any in **kwargs is needed for passthrough to httpx/Playwright
]

[tool.ruff.lint.isort]
known-first-party = ["web_auth_bridge"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Marker-based test tiering:
#   (no marker)    → unit tests. No browser, no network, no credentials.
#   integration    → real Playwright browser against a local HTTP server.
#                    No credentials, no external network. Slow but hermetic.
#   e2e            → real external websites. Requires real credentials via
#                    environment variables or a ``.env`` / ``.env.tests``
#                    file at the project root. Skipped by default.
#
# Usage:
#   pytest                       # unit only (fast, no deps)
#   pytest -m "integration"      # integration only
#   pytest -m "not e2e"          # everything except live sites
#   pytest -m "e2e"              # live site tests (needs credentials)
#   pytest -m "e2e and garmin"   # only Garmin e2e tests
markers = [
    "integration: requires real Playwright browser (local HTTP server, no external network)",
    "e2e: requires real external website credentials (loaded from environment or .env)",
    "garmin: Garmin Connect e2e test (needs GARMIN_EMAIL/GARMIN_PASSWORD)",
    "rouvy: Rouvy e2e test (needs ROUVY_EMAIL/ROUVY_PASSWORD)",
]
# Exclude e2e tests from default collection — they require credentials and
# network access, which unit/integration runs must not depend on.
addopts = "-m 'not e2e'"


[tool.poe.tasks]
# Run with: uv run poe <task>   (or just: poe <task> inside the venv)
test         = { cmd = "pytest",                                 help = "Unit + integration tests (default, no creds)" }
test-unit    = { cmd = "pytest -m 'not integration and not e2e'", help = "Unit tests only - fastest" }
test-int     = { cmd = "pytest -m integration",                   help = "Integration tests (Playwright + local server)" }
test-e2e     = { cmd = "pytest -m e2e",                           help = "All live-site e2e tests (needs .env credentials)" }
test-garmin  = { cmd = "pytest -m 'e2e and garmin'",              help = "Garmin live e2e only" }
test-rouvy   = { cmd = "pytest -m 'e2e and rouvy'",               help = "Rouvy live e2e only" }
cov          = { cmd = "pytest --cov=web_auth_bridge --cov-report=term-missing", help = "Default tests with coverage report" }
cov-html     = { cmd = "pytest --cov=web_auth_bridge --cov-report=html",         help = "Coverage report as HTML in htmlcov/" }
lint         = { cmd = "ruff check .",                            help = "Lint all sources and tests" }
lint-fix     = { cmd = "ruff check . --fix",                      help = "Lint with autofix" }
format       = { cmd = "ruff format .",                           help = "Format all sources and tests" }
check        = { sequence = ["lint", "test"],                     help = "Lint + default tests (CI gate)" }
